--- a/T/Info.plist
+++ b/T/Info.plist
@@ -2,9 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict/>
+	</array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>SF-Compact-Display-Bold.otf</string>
+		<string>SF-Pro-Display-Bold.otf</string>
 	</array>
 </dict>
 </plist>
